// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inspect Should inspect for errors for no select: SELECT  FROM all_types: no select 1`] = `
{
  "code": 1,
  "end": 15,
  "message": "Unexpected token at 1:14",
  "start": 13,
}
`;

exports[`Inspect Should inspect for errors for wrong order: SELECT * FORM all_types: wrong order 1`] = `
{
  "code": 1,
  "end": 11,
  "message": "Unexpected token at 1:10",
  "start": 9,
}
`;

exports[`Inspect Should load completions for complex: 
      SELECT * FROM accounts
      JOIN contracts ON contracts.account_id = accounts.id
      LEFT JOIN installations ON contracts.installation_id = installations.id
      WHERE
        (accounts.end_on IS NULL OR accounts.end_on >= $start)
        AND accounts.state = ANY(ARRAY['Active', 'Pending Loss']::account_state[])
        AND contracts.exp‸ort_type = ANY(ARRAY['Metered Export','Deemed']::installation_export_type): complex 1`] = `
[
  {
    "name": "id",
    "source": undefined,
  },
  {
    "name": "scheme_type",
    "source": undefined,
  },
  {
    "name": "scheme_account_reference",
    "source": undefined,
  },
  {
    "name": "confirmation_on",
    "source": undefined,
  },
  {
    "name": "terms_and_conditions_agreed",
    "source": undefined,
  },
  {
    "name": "created_at",
    "source": undefined,
  },
  {
    "name": "updated_at",
    "source": undefined,
  },
  {
    "name": "installation_id",
    "source": undefined,
  },
  {
    "name": "generation_tariff_id",
    "source": undefined,
  },
  {
    "name": "export_tariff_id",
    "source": undefined,
  },
  {
    "name": "source_system_id",
    "source": undefined,
  },
  {
    "name": "export_percentage_split",
    "source": undefined,
  },
  {
    "name": "generation_percentage_split",
    "source": undefined,
  },
  {
    "name": "contact_id",
    "source": undefined,
  },
  {
    "name": "account_id",
    "source": undefined,
  },
  {
    "name": "capacity",
    "source": undefined,
  },
  {
    "name": "start_on",
    "source": undefined,
  },
  {
    "name": "end_on",
    "source": undefined,
  },
  {
    "name": "export_type",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for empty_column: SELECT all_types.‸empty_column FROM all_types: empty_column 1`] = `
[
  {
    "name": "id",
    "source": undefined,
  },
  {
    "name": "not_null",
    "source": "This column should never be null",
  },
  {
    "name": "default_not_null",
    "source": undefined,
  },
  {
    "name": "bigint_col",
    "source": undefined,
  },
  {
    "name": "bigserial_col",
    "source": undefined,
  },
  {
    "name": "bit_col",
    "source": undefined,
  },
  {
    "name": "bit_varying_col",
    "source": undefined,
  },
  {
    "name": "boolean_col",
    "source": undefined,
  },
  {
    "name": "box_col",
    "source": undefined,
  },
  {
    "name": "bytea_col",
    "source": undefined,
  },
  {
    "name": "character_col",
    "source": undefined,
  },
  {
    "name": "character_varying_col",
    "source": undefined,
  },
  {
    "name": "cidr_col",
    "source": undefined,
  },
  {
    "name": "circle_col",
    "source": undefined,
  },
  {
    "name": "date_col",
    "source": undefined,
  },
  {
    "name": "double_col",
    "source": undefined,
  },
  {
    "name": "inet_col",
    "source": undefined,
  },
  {
    "name": "integer_col",
    "source": undefined,
  },
  {
    "name": "interval_col",
    "source": undefined,
  },
  {
    "name": "json_col",
    "source": undefined,
  },
  {
    "name": "jsonb_col",
    "source": undefined,
  },
  {
    "name": "line_col",
    "source": undefined,
  },
  {
    "name": "lseg_col",
    "source": undefined,
  },
  {
    "name": "macaddr_col",
    "source": undefined,
  },
  {
    "name": "money_col",
    "source": undefined,
  },
  {
    "name": "numeric_col",
    "source": undefined,
  },
  {
    "name": "path_col",
    "source": undefined,
  },
  {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  {
    "name": "point_col",
    "source": undefined,
  },
  {
    "name": "polygon_col",
    "source": undefined,
  },
  {
    "name": "real_col",
    "source": undefined,
  },
  {
    "name": "smallint_col",
    "source": undefined,
  },
  {
    "name": "smallserial_col",
    "source": undefined,
  },
  {
    "name": "serial_col",
    "source": undefined,
  },
  {
    "name": "text_col",
    "source": undefined,
  },
  {
    "name": "time_col",
    "source": undefined,
  },
  {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "timestamp_col",
    "source": undefined,
  },
  {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "tsquery_col",
    "source": undefined,
  },
  {
    "name": "tsvector_col",
    "source": undefined,
  },
  {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  {
    "name": "uuid_col",
    "source": undefined,
  },
  {
    "name": "xml_col",
    "source": undefined,
  },
  {
    "name": "item",
    "source": undefined,
  },
  {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  {
    "name": "state_arr",
    "source": undefined,
  },
  {
    "name": "item_arr",
    "source": undefined,
  },
  {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for end of column: SELECT all_types.id‸ FROM all_types: end of column 1`] = `
[
  {
    "name": "id",
    "source": undefined,
  },
  {
    "name": "not_null",
    "source": "This column should never be null",
  },
  {
    "name": "default_not_null",
    "source": undefined,
  },
  {
    "name": "bigint_col",
    "source": undefined,
  },
  {
    "name": "bigserial_col",
    "source": undefined,
  },
  {
    "name": "bit_col",
    "source": undefined,
  },
  {
    "name": "bit_varying_col",
    "source": undefined,
  },
  {
    "name": "boolean_col",
    "source": undefined,
  },
  {
    "name": "box_col",
    "source": undefined,
  },
  {
    "name": "bytea_col",
    "source": undefined,
  },
  {
    "name": "character_col",
    "source": undefined,
  },
  {
    "name": "character_varying_col",
    "source": undefined,
  },
  {
    "name": "cidr_col",
    "source": undefined,
  },
  {
    "name": "circle_col",
    "source": undefined,
  },
  {
    "name": "date_col",
    "source": undefined,
  },
  {
    "name": "double_col",
    "source": undefined,
  },
  {
    "name": "inet_col",
    "source": undefined,
  },
  {
    "name": "integer_col",
    "source": undefined,
  },
  {
    "name": "interval_col",
    "source": undefined,
  },
  {
    "name": "json_col",
    "source": undefined,
  },
  {
    "name": "jsonb_col",
    "source": undefined,
  },
  {
    "name": "line_col",
    "source": undefined,
  },
  {
    "name": "lseg_col",
    "source": undefined,
  },
  {
    "name": "macaddr_col",
    "source": undefined,
  },
  {
    "name": "money_col",
    "source": undefined,
  },
  {
    "name": "numeric_col",
    "source": undefined,
  },
  {
    "name": "path_col",
    "source": undefined,
  },
  {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  {
    "name": "point_col",
    "source": undefined,
  },
  {
    "name": "polygon_col",
    "source": undefined,
  },
  {
    "name": "real_col",
    "source": undefined,
  },
  {
    "name": "smallint_col",
    "source": undefined,
  },
  {
    "name": "smallserial_col",
    "source": undefined,
  },
  {
    "name": "serial_col",
    "source": undefined,
  },
  {
    "name": "text_col",
    "source": undefined,
  },
  {
    "name": "time_col",
    "source": undefined,
  },
  {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "timestamp_col",
    "source": undefined,
  },
  {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "tsquery_col",
    "source": undefined,
  },
  {
    "name": "tsvector_col",
    "source": undefined,
  },
  {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  {
    "name": "uuid_col",
    "source": undefined,
  },
  {
    "name": "xml_col",
    "source": undefined,
  },
  {
    "name": "item",
    "source": undefined,
  },
  {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  {
    "name": "state_arr",
    "source": undefined,
  },
  {
    "name": "item_arr",
    "source": undefined,
  },
  {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for enum left: SELECT * FROM all_types WHERE 'A‸ctive' = all_types.state: enum left 1`] = `
[
  {
    "name": "Active",
  },
  {
    "name": "Pending",
  },
  {
    "name": "Dispute",
  },
  {
    "name": "Closed",
  },
]
`;

exports[`Inspect Should load completions for enum right: SELECT * FROM all_types WHERE all_types.state = 'A‸ctive': enum right 1`] = `
[
  {
    "name": "Active",
  },
  {
    "name": "Pending",
  },
  {
    "name": "Dispute",
  },
  {
    "name": "Closed",
  },
]
`;

exports[`Inspect Should load completions for insert column: INSERT INTO all_types(id, sta‸te) VALUES (1, 'Active'): insert column 1`] = `
[
  {
    "name": "id",
    "source": undefined,
  },
  {
    "name": "not_null",
    "source": "This column should never be null",
  },
  {
    "name": "default_not_null",
    "source": undefined,
  },
  {
    "name": "bigint_col",
    "source": undefined,
  },
  {
    "name": "bigserial_col",
    "source": undefined,
  },
  {
    "name": "bit_col",
    "source": undefined,
  },
  {
    "name": "bit_varying_col",
    "source": undefined,
  },
  {
    "name": "boolean_col",
    "source": undefined,
  },
  {
    "name": "box_col",
    "source": undefined,
  },
  {
    "name": "bytea_col",
    "source": undefined,
  },
  {
    "name": "character_col",
    "source": undefined,
  },
  {
    "name": "character_varying_col",
    "source": undefined,
  },
  {
    "name": "cidr_col",
    "source": undefined,
  },
  {
    "name": "circle_col",
    "source": undefined,
  },
  {
    "name": "date_col",
    "source": undefined,
  },
  {
    "name": "double_col",
    "source": undefined,
  },
  {
    "name": "inet_col",
    "source": undefined,
  },
  {
    "name": "integer_col",
    "source": undefined,
  },
  {
    "name": "interval_col",
    "source": undefined,
  },
  {
    "name": "json_col",
    "source": undefined,
  },
  {
    "name": "jsonb_col",
    "source": undefined,
  },
  {
    "name": "line_col",
    "source": undefined,
  },
  {
    "name": "lseg_col",
    "source": undefined,
  },
  {
    "name": "macaddr_col",
    "source": undefined,
  },
  {
    "name": "money_col",
    "source": undefined,
  },
  {
    "name": "numeric_col",
    "source": undefined,
  },
  {
    "name": "path_col",
    "source": undefined,
  },
  {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  {
    "name": "point_col",
    "source": undefined,
  },
  {
    "name": "polygon_col",
    "source": undefined,
  },
  {
    "name": "real_col",
    "source": undefined,
  },
  {
    "name": "smallint_col",
    "source": undefined,
  },
  {
    "name": "smallserial_col",
    "source": undefined,
  },
  {
    "name": "serial_col",
    "source": undefined,
  },
  {
    "name": "text_col",
    "source": undefined,
  },
  {
    "name": "time_col",
    "source": undefined,
  },
  {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "timestamp_col",
    "source": undefined,
  },
  {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "tsquery_col",
    "source": undefined,
  },
  {
    "name": "tsvector_col",
    "source": undefined,
  },
  {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  {
    "name": "uuid_col",
    "source": undefined,
  },
  {
    "name": "xml_col",
    "source": undefined,
  },
  {
    "name": "item",
    "source": undefined,
  },
  {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  {
    "name": "state_arr",
    "source": undefined,
  },
  {
    "name": "item_arr",
    "source": undefined,
  },
  {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for partial from: SELECT all_types.id FROM a‸: partial from 1`] = `
[
  {
    "name": "account_levelisations",
    "source": undefined,
  },
  {
    "name": "accounts",
    "source": undefined,
  },
  {
    "name": "active_reads",
    "source": undefined,
  },
  {
    "name": "addresses",
    "source": undefined,
  },
  {
    "name": "all_types",
    "source": "All the postgres types",
  },
  {
    "name": "all_types_view",
    "source": "Summurized view",
  },
  {
    "name": "authors",
    "source": undefined,
  },
  {
    "name": "book_orders",
    "source": undefined,
  },
  {
    "name": "books",
    "source": undefined,
  },
  {
    "name": "contacts",
    "source": undefined,
  },
  {
    "name": "contracts",
    "source": undefined,
  },
  {
    "name": "customers",
    "source": undefined,
  },
  {
    "name": "installation_meters",
    "source": undefined,
  },
  {
    "name": "installations",
    "source": undefined,
  },
  {
    "name": "issues",
    "source": undefined,
  },
  {
    "name": "levelisations",
    "source": undefined,
  },
  {
    "name": "meter_reads",
    "source": undefined,
  },
  {
    "name": "meter_registers",
    "source": undefined,
  },
  {
    "name": "meters",
    "source": undefined,
  },
  {
    "name": "orders",
    "source": undefined,
  },
  {
    "name": "payments",
    "source": undefined,
  },
  {
    "name": "process_items",
    "source": undefined,
  },
  {
    "name": "tariff_rates",
    "source": undefined,
  },
  {
    "name": "tariffs",
    "source": undefined,
  },
  {
    "name": "transactions",
    "source": undefined,
  },
  {
    "name": "unlevelised_active_reads",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for schema column: SELECT fit‸ FROM fit.FiTAccount: schema column 1`] = `
[
  {
    "name": "FiTAccountId",
    "source": undefined,
  },
  {
    "name": "FitAccountReference",
    "source": undefined,
  },
  {
    "name": "IsAccountInDispute",
    "source": undefined,
  },
  {
    "name": "IsActive",
    "source": undefined,
  },
  {
    "name": "DateInserted",
    "source": undefined,
  },
  {
    "name": "DateUpdated",
    "source": undefined,
  },
  {
    "name": "WhoInserted",
    "source": undefined,
  },
  {
    "name": "WhoUpdated",
    "source": undefined,
  },
  {
    "name": "DateDisputeStart",
    "source": undefined,
  },
  {
    "name": "DateDisputeEnd",
    "source": undefined,
  },
  {
    "name": "FiTAccount",
    "source": "Table",
  },
]
`;

exports[`Inspect Should load completions for schema table: SELECT "FiTAccountId" FROM fit.‸FiTAccount: schema table 1`] = `
[
  {
    "name": "address",
    "source": undefined,
  },
  {
    "name": "addresstype",
    "source": undefined,
  },
  {
    "name": "auditcsa",
    "source": undefined,
  },
  {
    "name": "bankaccount",
    "source": undefined,
  },
  {
    "name": "bankaccountaudit",
    "source": undefined,
  },
  {
    "name": "checklist",
    "source": undefined,
  },
  {
    "name": "configuration",
    "source": undefined,
  },
  {
    "name": "customer",
    "source": undefined,
  },
  {
    "name": "customeraccount",
    "source": undefined,
  },
  {
    "name": "customeraddress",
    "source": undefined,
  },
  {
    "name": "customerrole",
    "source": undefined,
  },
  {
    "name": "customersequence",
    "source": undefined,
  },
  {
    "name": "document",
    "source": undefined,
  },
  {
    "name": "documenttype",
    "source": undefined,
  },
  {
    "name": "failedmeterreading",
    "source": undefined,
  },
  {
    "name": "failedvalidationimport",
    "source": undefined,
  },
  {
    "name": "fitaccount",
    "source": undefined,
  },
  {
    "name": "fitaccountsequence",
    "source": undefined,
  },
  {
    "name": "generationaccount",
    "source": undefined,
  },
  {
    "name": "generationaccountinstallation",
    "source": undefined,
  },
  {
    "name": "generatortechnologytype",
    "source": undefined,
  },
  {
    "name": "gentrackaccount",
    "source": undefined,
  },
  {
    "name": "installation",
    "source": undefined,
  },
  {
    "name": "installationmeter",
    "source": undefined,
  },
  {
    "name": "installationsequence",
    "source": undefined,
  },
  {
    "name": "installationtype",
    "source": undefined,
  },
  {
    "name": "installationverificationinfo",
    "source": undefined,
  },
  {
    "name": "loadfactor",
    "source": undefined,
  },
  {
    "name": "memo",
    "source": undefined,
  },
  {
    "name": "meter",
    "source": undefined,
  },
  {
    "name": "metermodel",
    "source": undefined,
  },
  {
    "name": "meterreading",
    "source": undefined,
  },
  {
    "name": "meterreadinghistory",
    "source": undefined,
  },
  {
    "name": "metertype",
    "source": undefined,
  },
  {
    "name": "payment",
    "source": undefined,
  },
  {
    "name": "propertytype",
    "source": undefined,
  },
  {
    "name": "securityquestion",
    "source": undefined,
  },
  {
    "name": "segaccountsequence",
    "source": undefined,
  },
  {
    "name": "switch",
    "source": undefined,
  },
  {
    "name": "tariff",
    "source": undefined,
  },
  {
    "name": "tariffexportrate",
    "source": undefined,
  },
  {
    "name": "tariffrate",
    "source": undefined,
  },
  {
    "name": "tarifftype",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for select cast type: SELECT 'Active'::s‸t: select cast type 1`] = `
[
  {
    "name": "account_levelisation_state",
    "source": undefined,
  },
  {
    "name": "account_payment_plans",
    "source": undefined,
  },
  {
    "name": "account_state",
    "source": "Lifecycle of account",
  },
  {
    "name": "contact_titles",
    "source": undefined,
  },
  {
    "name": "contract_scheme_types",
    "source": undefined,
  },
  {
    "name": "installation_export_type",
    "source": undefined,
  },
  {
    "name": "installation_property_type",
    "source": undefined,
  },
  {
    "name": "installation_technology_types",
    "source": undefined,
  },
  {
    "name": "installation_types",
    "source": undefined,
  },
  {
    "name": "inventory_item",
    "source": undefined,
  },
  {
    "name": "issue_reference_type",
    "source": undefined,
  },
  {
    "name": "issue_state",
    "source": undefined,
  },
  {
    "name": "issue_type",
    "source": undefined,
  },
  {
    "name": "meter_reads_types",
    "source": undefined,
  },
  {
    "name": "meter_types",
    "source": undefined,
  },
  {
    "name": "order_state",
    "source": undefined,
  },
  {
    "name": "payments_type",
    "source": undefined,
  },
  {
    "name": "process_item_status",
    "source": undefined,
  },
  {
    "name": "tariff_types",
    "source": undefined,
  },
  {
    "name": "transaction_history",
    "source": undefined,
  },
  {
    "name": "transaction_state",
    "source": undefined,
  },
  {
    "name": "bool",
    "source": "Native",
  },
  {
    "name": "char",
    "source": "Native",
  },
  {
    "name": "varchar",
    "source": "Native",
  },
  {
    "name": "int",
    "source": "Native",
  },
  {
    "name": "decimal",
    "source": "Native",
  },
  {
    "name": "float",
    "source": "Native",
  },
  {
    "name": "serial",
    "source": "Native",
  },
  {
    "name": "date",
    "source": "Native",
  },
  {
    "name": "timestamp",
    "source": "Native",
  },
  {
    "name": "time",
    "source": "Native",
  },
]
`;

exports[`Inspect Should load completions for single column 1: SELECT all_types.i‸d FROM all_types: single column 1 1`] = `
[
  {
    "name": "id",
    "source": undefined,
  },
  {
    "name": "not_null",
    "source": "This column should never be null",
  },
  {
    "name": "default_not_null",
    "source": undefined,
  },
  {
    "name": "bigint_col",
    "source": undefined,
  },
  {
    "name": "bigserial_col",
    "source": undefined,
  },
  {
    "name": "bit_col",
    "source": undefined,
  },
  {
    "name": "bit_varying_col",
    "source": undefined,
  },
  {
    "name": "boolean_col",
    "source": undefined,
  },
  {
    "name": "box_col",
    "source": undefined,
  },
  {
    "name": "bytea_col",
    "source": undefined,
  },
  {
    "name": "character_col",
    "source": undefined,
  },
  {
    "name": "character_varying_col",
    "source": undefined,
  },
  {
    "name": "cidr_col",
    "source": undefined,
  },
  {
    "name": "circle_col",
    "source": undefined,
  },
  {
    "name": "date_col",
    "source": undefined,
  },
  {
    "name": "double_col",
    "source": undefined,
  },
  {
    "name": "inet_col",
    "source": undefined,
  },
  {
    "name": "integer_col",
    "source": undefined,
  },
  {
    "name": "interval_col",
    "source": undefined,
  },
  {
    "name": "json_col",
    "source": undefined,
  },
  {
    "name": "jsonb_col",
    "source": undefined,
  },
  {
    "name": "line_col",
    "source": undefined,
  },
  {
    "name": "lseg_col",
    "source": undefined,
  },
  {
    "name": "macaddr_col",
    "source": undefined,
  },
  {
    "name": "money_col",
    "source": undefined,
  },
  {
    "name": "numeric_col",
    "source": undefined,
  },
  {
    "name": "path_col",
    "source": undefined,
  },
  {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  {
    "name": "point_col",
    "source": undefined,
  },
  {
    "name": "polygon_col",
    "source": undefined,
  },
  {
    "name": "real_col",
    "source": undefined,
  },
  {
    "name": "smallint_col",
    "source": undefined,
  },
  {
    "name": "smallserial_col",
    "source": undefined,
  },
  {
    "name": "serial_col",
    "source": undefined,
  },
  {
    "name": "text_col",
    "source": undefined,
  },
  {
    "name": "time_col",
    "source": undefined,
  },
  {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "timestamp_col",
    "source": undefined,
  },
  {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "tsquery_col",
    "source": undefined,
  },
  {
    "name": "tsvector_col",
    "source": undefined,
  },
  {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  {
    "name": "uuid_col",
    "source": undefined,
  },
  {
    "name": "xml_col",
    "source": undefined,
  },
  {
    "name": "item",
    "source": undefined,
  },
  {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  {
    "name": "state_arr",
    "source": undefined,
  },
  {
    "name": "item_arr",
    "source": undefined,
  },
  {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for single column 2: SELECT all_types.‸id FROM all_types: single column 2 1`] = `
[
  {
    "name": "id",
    "source": undefined,
  },
  {
    "name": "not_null",
    "source": "This column should never be null",
  },
  {
    "name": "default_not_null",
    "source": undefined,
  },
  {
    "name": "bigint_col",
    "source": undefined,
  },
  {
    "name": "bigserial_col",
    "source": undefined,
  },
  {
    "name": "bit_col",
    "source": undefined,
  },
  {
    "name": "bit_varying_col",
    "source": undefined,
  },
  {
    "name": "boolean_col",
    "source": undefined,
  },
  {
    "name": "box_col",
    "source": undefined,
  },
  {
    "name": "bytea_col",
    "source": undefined,
  },
  {
    "name": "character_col",
    "source": undefined,
  },
  {
    "name": "character_varying_col",
    "source": undefined,
  },
  {
    "name": "cidr_col",
    "source": undefined,
  },
  {
    "name": "circle_col",
    "source": undefined,
  },
  {
    "name": "date_col",
    "source": undefined,
  },
  {
    "name": "double_col",
    "source": undefined,
  },
  {
    "name": "inet_col",
    "source": undefined,
  },
  {
    "name": "integer_col",
    "source": undefined,
  },
  {
    "name": "interval_col",
    "source": undefined,
  },
  {
    "name": "json_col",
    "source": undefined,
  },
  {
    "name": "jsonb_col",
    "source": undefined,
  },
  {
    "name": "line_col",
    "source": undefined,
  },
  {
    "name": "lseg_col",
    "source": undefined,
  },
  {
    "name": "macaddr_col",
    "source": undefined,
  },
  {
    "name": "money_col",
    "source": undefined,
  },
  {
    "name": "numeric_col",
    "source": undefined,
  },
  {
    "name": "path_col",
    "source": undefined,
  },
  {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  {
    "name": "point_col",
    "source": undefined,
  },
  {
    "name": "polygon_col",
    "source": undefined,
  },
  {
    "name": "real_col",
    "source": undefined,
  },
  {
    "name": "smallint_col",
    "source": undefined,
  },
  {
    "name": "smallserial_col",
    "source": undefined,
  },
  {
    "name": "serial_col",
    "source": undefined,
  },
  {
    "name": "text_col",
    "source": undefined,
  },
  {
    "name": "time_col",
    "source": undefined,
  },
  {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "timestamp_col",
    "source": undefined,
  },
  {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "tsquery_col",
    "source": undefined,
  },
  {
    "name": "tsvector_col",
    "source": undefined,
  },
  {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  {
    "name": "uuid_col",
    "source": undefined,
  },
  {
    "name": "xml_col",
    "source": undefined,
  },
  {
    "name": "item",
    "source": undefined,
  },
  {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  {
    "name": "state_arr",
    "source": undefined,
  },
  {
    "name": "item_arr",
    "source": undefined,
  },
  {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for single table: SELECT all_types.id FROM all_‸types: single table 1`] = `
[
  {
    "name": "account_levelisations",
    "source": undefined,
  },
  {
    "name": "accounts",
    "source": undefined,
  },
  {
    "name": "active_reads",
    "source": undefined,
  },
  {
    "name": "addresses",
    "source": undefined,
  },
  {
    "name": "all_types",
    "source": "All the postgres types",
  },
  {
    "name": "all_types_view",
    "source": "Summurized view",
  },
  {
    "name": "authors",
    "source": undefined,
  },
  {
    "name": "book_orders",
    "source": undefined,
  },
  {
    "name": "books",
    "source": undefined,
  },
  {
    "name": "contacts",
    "source": undefined,
  },
  {
    "name": "contracts",
    "source": undefined,
  },
  {
    "name": "customers",
    "source": undefined,
  },
  {
    "name": "installation_meters",
    "source": undefined,
  },
  {
    "name": "installations",
    "source": undefined,
  },
  {
    "name": "issues",
    "source": undefined,
  },
  {
    "name": "levelisations",
    "source": undefined,
  },
  {
    "name": "meter_reads",
    "source": undefined,
  },
  {
    "name": "meter_registers",
    "source": undefined,
  },
  {
    "name": "meters",
    "source": undefined,
  },
  {
    "name": "orders",
    "source": undefined,
  },
  {
    "name": "payments",
    "source": undefined,
  },
  {
    "name": "process_items",
    "source": undefined,
  },
  {
    "name": "tariff_rates",
    "source": undefined,
  },
  {
    "name": "tariffs",
    "source": undefined,
  },
  {
    "name": "transactions",
    "source": undefined,
  },
  {
    "name": "unlevelised_active_reads",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for tables and columns: SELECT i‸d FROM all_types JOIN accounts ON all_types.id = accounts.id: tables and columns 1`] = `
[
  {
    "name": "not_null",
    "source": "This column should never be null",
  },
  {
    "name": "default_not_null",
    "source": undefined,
  },
  {
    "name": "bigint_col",
    "source": undefined,
  },
  {
    "name": "bigserial_col",
    "source": undefined,
  },
  {
    "name": "bit_col",
    "source": undefined,
  },
  {
    "name": "bit_varying_col",
    "source": undefined,
  },
  {
    "name": "boolean_col",
    "source": undefined,
  },
  {
    "name": "box_col",
    "source": undefined,
  },
  {
    "name": "bytea_col",
    "source": undefined,
  },
  {
    "name": "character_col",
    "source": undefined,
  },
  {
    "name": "character_varying_col",
    "source": undefined,
  },
  {
    "name": "cidr_col",
    "source": undefined,
  },
  {
    "name": "circle_col",
    "source": undefined,
  },
  {
    "name": "date_col",
    "source": undefined,
  },
  {
    "name": "double_col",
    "source": undefined,
  },
  {
    "name": "inet_col",
    "source": undefined,
  },
  {
    "name": "integer_col",
    "source": undefined,
  },
  {
    "name": "interval_col",
    "source": undefined,
  },
  {
    "name": "json_col",
    "source": undefined,
  },
  {
    "name": "jsonb_col",
    "source": undefined,
  },
  {
    "name": "line_col",
    "source": undefined,
  },
  {
    "name": "lseg_col",
    "source": undefined,
  },
  {
    "name": "macaddr_col",
    "source": undefined,
  },
  {
    "name": "money_col",
    "source": undefined,
  },
  {
    "name": "numeric_col",
    "source": undefined,
  },
  {
    "name": "path_col",
    "source": undefined,
  },
  {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  {
    "name": "point_col",
    "source": undefined,
  },
  {
    "name": "polygon_col",
    "source": undefined,
  },
  {
    "name": "real_col",
    "source": undefined,
  },
  {
    "name": "smallint_col",
    "source": undefined,
  },
  {
    "name": "smallserial_col",
    "source": undefined,
  },
  {
    "name": "serial_col",
    "source": undefined,
  },
  {
    "name": "text_col",
    "source": undefined,
  },
  {
    "name": "time_col",
    "source": undefined,
  },
  {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "timestamp_col",
    "source": undefined,
  },
  {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  {
    "name": "tsquery_col",
    "source": undefined,
  },
  {
    "name": "tsvector_col",
    "source": undefined,
  },
  {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  {
    "name": "uuid_col",
    "source": undefined,
  },
  {
    "name": "xml_col",
    "source": undefined,
  },
  {
    "name": "item",
    "source": undefined,
  },
  {
    "name": "state_arr",
    "source": undefined,
  },
  {
    "name": "item_arr",
    "source": undefined,
  },
  {
    "name": "static_arr",
    "source": undefined,
  },
  {
    "name": "customer_id",
    "source": undefined,
  },
  {
    "name": "beneficiary_name",
    "source": undefined,
  },
  {
    "name": "beneficiary_sort_code",
    "source": undefined,
  },
  {
    "name": "beneficiary_account_number",
    "source": undefined,
  },
  {
    "name": "payment_plan",
    "source": undefined,
  },
  {
    "name": "payment_suspended",
    "source": undefined,
  },
  {
    "name": "company_reg_number",
    "source": undefined,
  },
  {
    "name": "company_name",
    "source": undefined,
  },
  {
    "name": "company_vat_number",
    "source": undefined,
  },
  {
    "name": "created_at",
    "source": undefined,
  },
  {
    "name": "updated_at",
    "source": undefined,
  },
  {
    "name": "source_system_id",
    "source": undefined,
  },
  {
    "name": "start_on",
    "source": undefined,
  },
  {
    "name": "end_on",
    "source": undefined,
  },
  {
    "name": "all_types",
    "source": "Table",
  },
  {
    "name": "accounts",
    "source": "Table",
  },
]
`;

exports[`Inspect Should load quick info for binary expression column: SELECT * FROM all_types WHERE id = 1 AND stat‸e = 'Active': binary expression column 1`] = `
{
  "description": "From: all_types Table

---


  This column is an enum.
  It also contains several lines:
    - line1
    - line2


---

Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "state account_state",
  "end": 45,
  "start": 41,
}
`;

exports[`Inspect Should load quick info for column: SELECT all_types.i‸d FROM all_types: column 1`] = `
{
  "description": "From: all_types Table",
  "display": "id integer NOT NULL",
  "end": 18,
  "start": 17,
}
`;

exports[`Inspect Should load quick info for composite: SELECT all_types.it‸em FROM all_types: composite 1`] = `
{
  "description": "From: all_types Table

---

|Name|Type|
|---|---|
|name|**text** \`NULL\`|
|supplier_id|**integer** \`NULL\`|
|price|**numeric** \`NULL\`|",
  "display": "item inventory_item NOT NULL",
  "end": 20,
  "start": 17,
}
`;

exports[`Inspect Should load quick info for enum left: SELECT * FROM all_types WHERE 'A‸ctive' = all_types.state: enum left 1`] = `
{
  "description": "Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "Enum",
  "end": 37,
  "start": 30,
}
`;

exports[`Inspect Should load quick info for enum right: SELECT * FROM all_types WHERE all_types.state = 'A‸ctive': enum right 1`] = `
{
  "description": "Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "Enum",
  "end": 55,
  "start": 48,
}
`;

exports[`Inspect Should load quick info for enum: SELECT all_types.sta‸te FROM all_types: enum 1`] = `
{
  "description": "From: all_types Table

---


  This column is an enum.
  It also contains several lines:
    - line1
    - line2


---

Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "state account_state",
  "end": 21,
  "start": 17,
}
`;

exports[`Inspect Should load quick info for function info: SELECT date_to_seg_q‸uarter('2022-01-01'): function info 1`] = `
{
  "description": "SEG(Smart Export Guarantee) quarter identifier from the start of the program - 2019-01-01",
  "display": "date_to_seg_quarter (date): text",
  "end": 39,
  "start": 7,
}
`;

exports[`Inspect Should load quick info for insert column: INSERT INTO all_types(id, sta‸te) VALUES (1, 'Active'): insert column 1`] = `
{
  "description": "From: all_types Table

---


  This column is an enum.
  It also contains several lines:
    - line1
    - line2


---

Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "state account_state",
  "end": 30,
  "start": 26,
}
`;

exports[`Inspect Should load quick info for join alias direct: SELECT * FROM all_types LEFT JOIN accounts AS a‸cc ON all_types.id = acc.id: join alias direct 1`] = `
{
  "description": "|Name|Type|
|---|---|
|id|**integer** \`NOT_NULL\`|
|customer_id|**integer** \`NOT_NULL\`|
|state|**account_state** \`NOT_NULL\`|
|beneficiary_name|**character varying** \`NULL\`|
|beneficiary_sort_code|**character varying** \`NULL\`|
|beneficiary_account_number|**character varying** \`NULL\`|
|payment_plan|**account_payment_plans** \`NULL\`|
|payment_suspended|**boolean** \`NULL\`|
|company_reg_number|**character varying** \`NULL\`|
|company_name|**character varying** \`NULL\`|
|company_vat_number|**character varying** \`NULL\`|
|created_at|**timestamp** \`NOT_NULL\`|
|updated_at|**timestamp** \`NULL\`|
|source_system_id|**integer** \`NULL\`|
|start_on|**date** \`NULL\`|
|end_on|**date** \`NULL\`|",
  "display": "accounts AS acc Table",
  "end": 48,
  "start": 43,
}
`;

exports[`Inspect Should load quick info for join alias table: SELECT * FROM all_types JOIN accou‸nts AS acc ON all_types.id = acc.id: join alias table 1`] = `
{
  "description": "|Name|Type|
|---|---|
|id|**integer** \`NOT_NULL\`|
|customer_id|**integer** \`NOT_NULL\`|
|state|**account_state** \`NOT_NULL\`|
|beneficiary_name|**character varying** \`NULL\`|
|beneficiary_sort_code|**character varying** \`NULL\`|
|beneficiary_account_number|**character varying** \`NULL\`|
|payment_plan|**account_payment_plans** \`NULL\`|
|payment_suspended|**boolean** \`NULL\`|
|company_reg_number|**character varying** \`NULL\`|
|company_name|**character varying** \`NULL\`|
|company_vat_number|**character varying** \`NULL\`|
|created_at|**timestamp** \`NOT_NULL\`|
|updated_at|**timestamp** \`NULL\`|
|source_system_id|**integer** \`NULL\`|
|start_on|**date** \`NULL\`|
|end_on|**date** \`NULL\`|",
  "display": "accounts AS acc Table",
  "end": 36,
  "start": 29,
}
`;

exports[`Inspect Should load quick info for select cast type: SELECT 'Active'::ac‸count_state: select cast type 1`] = `
{
  "description": "Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "Enum",
  "end": 29,
  "start": 17,
}
`;

exports[`Inspect Should load quick info for source: SELECT all_ty‸pes.id FROM all_types: source 1`] = `
{
  "description": "|Name|Type|
|---|---|
|id|**integer** \`NOT_NULL\`|
|not_null|**integer** \`NOT_NULL\`|
||This column should never be null|
|default_not_null|**integer** \`NOT_NULL\`|
|bigint_col|**bigint** \`NULL\`|
|bigserial_col|**bigint** \`NOT_NULL\`|
|bit_col|**bit** \`NULL\`|
|bit_varying_col|**bit varying** \`NULL\`|
|boolean_col|**boolean** \`NULL\`|
|box_col|**box** \`NULL\`|
|bytea_col|**bytea** \`NULL\`|
|character_col|**character** \`NULL\`|
|character_varying_col|**character varying** \`NULL\`|
|cidr_col|**cidr** \`NULL\`|
|circle_col|**circle** \`NULL\`|
|date_col|**date** \`NULL\`|
|double_col|**double precision** \`NULL\`|
|inet_col|**inet** \`NULL\`|
|integer_col|**integer** \`NULL\`|
|interval_col|**interval** \`NULL\`|
|json_col|**json** \`NULL\`|
|jsonb_col|**jsonb** \`NULL\`|
|line_col|**line** \`NULL\`|
|lseg_col|**lseg** \`NULL\`|
|macaddr_col|**macaddr** \`NULL\`|
|money_col|**money** \`NULL\`|
|numeric_col|**numeric** \`NULL\`|
|path_col|**path** \`NULL\`|
|pg_lsn_col|**pg_lsn** \`NULL\`|
|point_col|**point** \`NULL\`|
|polygon_col|**polygon** \`NULL\`|
|real_col|**real** \`NULL\`|
|smallint_col|**smallint** \`NULL\`|
|smallserial_col|**smallint** \`NOT_NULL\`|
|serial_col|**integer** \`NOT_NULL\`|
|text_col|**text** \`NULL\`|
|time_col|**time** \`NULL\`|
|time_with_time_zone_col|**timetz** \`NULL\`|
|timestamp_col|**timestamp** \`NULL\`|
|timestamp_with_time_zone_col|**timestamptz** \`NULL\`|
|tsquery_col|**tsquery** \`NULL\`|
|tsvector_col|**tsvector** \`NULL\`|
|txid_snapshot_col|**txid_snapshot** \`NULL\`|
|uuid_col|**uuid** \`NULL\`|
|xml_col|**xml** \`NULL\`|
|item|**inventory_item** \`NOT_NULL\`|
|state|**account_state** \`NULL\`|
||This column is an enum.|
||  It also contains several lines:|
||    - line1|
||    - line2|
|state_arr|**account_state[]** \`NULL\`|
|item_arr|**inventory_item[]** \`NULL\`|
|static_arr|**int8[]** \`NULL\`|",
  "display": "all_types Table",
  "end": 15,
  "start": 7,
}
`;

exports[`Inspect Should load quick info for table: SELECT all_types.id FROM all‸_types: table 1`] = `
{
  "description": "All the postgres types

---

|Name|Type|
|---|---|
|id|**integer** \`NOT_NULL\`|
|not_null|**integer** \`NOT_NULL\`|
||This column should never be null|
|default_not_null|**integer** \`NOT_NULL\`|
|bigint_col|**bigint** \`NULL\`|
|bigserial_col|**bigint** \`NOT_NULL\`|
|bit_col|**bit** \`NULL\`|
|bit_varying_col|**bit varying** \`NULL\`|
|boolean_col|**boolean** \`NULL\`|
|box_col|**box** \`NULL\`|
|bytea_col|**bytea** \`NULL\`|
|character_col|**character** \`NULL\`|
|character_varying_col|**character varying** \`NULL\`|
|cidr_col|**cidr** \`NULL\`|
|circle_col|**circle** \`NULL\`|
|date_col|**date** \`NULL\`|
|double_col|**double precision** \`NULL\`|
|inet_col|**inet** \`NULL\`|
|integer_col|**integer** \`NULL\`|
|interval_col|**interval** \`NULL\`|
|json_col|**json** \`NULL\`|
|jsonb_col|**jsonb** \`NULL\`|
|line_col|**line** \`NULL\`|
|lseg_col|**lseg** \`NULL\`|
|macaddr_col|**macaddr** \`NULL\`|
|money_col|**money** \`NULL\`|
|numeric_col|**numeric** \`NULL\`|
|path_col|**path** \`NULL\`|
|pg_lsn_col|**pg_lsn** \`NULL\`|
|point_col|**point** \`NULL\`|
|polygon_col|**polygon** \`NULL\`|
|real_col|**real** \`NULL\`|
|smallint_col|**smallint** \`NULL\`|
|smallserial_col|**smallint** \`NOT_NULL\`|
|serial_col|**integer** \`NOT_NULL\`|
|text_col|**text** \`NULL\`|
|time_col|**time** \`NULL\`|
|time_with_time_zone_col|**timetz** \`NULL\`|
|timestamp_col|**timestamp** \`NULL\`|
|timestamp_with_time_zone_col|**timestamptz** \`NULL\`|
|tsquery_col|**tsquery** \`NULL\`|
|tsvector_col|**tsvector** \`NULL\`|
|txid_snapshot_col|**txid_snapshot** \`NULL\`|
|uuid_col|**uuid** \`NULL\`|
|xml_col|**xml** \`NULL\`|
|item|**inventory_item** \`NOT_NULL\`|
|state|**account_state** \`NULL\`|
||This column is an enum.|
||  It also contains several lines:|
||    - line1|
||    - line2|
|state_arr|**account_state[]** \`NULL\`|
|item_arr|**inventory_item[]** \`NULL\`|
|static_arr|**int8[]** \`NULL\`|",
  "display": "all_types Table",
  "end": 33,
  "start": 25,
}
`;
